Personal/src/objects/Calculator__c.object
<CustomObject>
    <description>For calculation</description>
    <fields>
        <fullName>First_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <description>First number</description>
        <label>First Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MultiSample__c</fullName>
        <description>Sample multiselect</description>
        <label>MultiSample</label>
        <picklist>
            <picklistValues>
                <fullName>Abc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Def</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jkl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pqr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stu</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Result</description>
        <label>Result</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample__c</fullName>
        <label>Sample</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Second_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Second Number</description>
        <label>Second Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Calculator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Calculator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calculators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>